--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Clima">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.ForecastActivity"></activity>
+        <activity android:name=".ui.WeatherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
