--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "PROVIDER_AUTH", rootProject.ext.provider_auth
     }
 
     buildTypes {
