--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+
     //Koin - Dependency Injection
     def koin_version = "2.2.3"
     implementation "io.insert-koin:koin-android-viewmodel:$koin_version"
@@ -78,5 +79,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$arch_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$arch_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$arch_version"
+
+    //Lottie Files
+    implementation 'com.airbnb.android:lottie:3.7.2'
 
 }
