--- a/.gitignore
+++ b/.gitignore
@@ -202,6 +202,6 @@ fabric.properties
 
 
 # End of https://www.gitignore.io/api/java,android,androidstudio
-/keystore.properties
+#/keystore.properties
 /app/release/output-metadata.json
 /app/schemas/
