--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,6 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
+    //GSON
+    implementation "com.google.code.gson:gson:2.8.6"
 }
